<resources>
    <string name="app_name">AM Radio</string>

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="applovin_sdk_key">X3NZGJ20xmvvx25u0tQi6qMmTouKMF-xbWHr6LCLVP_3BIFhBvKwqgSZ1vCiWq0WuQIWmLWh9e2ViwlrOWec5r</string>

    <string name="follow_us">Follow Us</string>
    <string name="facebook_username">andromob.in</string>
    <string name="facebook_page_id">101307788838567</string>
    <string name="instagram_username">andro_mob</string>
    <string name="twitter_username">andromob_in</string>
    <string name="telegram_username">andromob_in</string>

    <string name="about_heading_text">Multi Station Live Radio App</string>
    <string name="about_us_version">Version</string>
    <string name="about_us_email">Email</string>
    <string name="about_us_email_text">andromobindia@gmail.com</string>
    <string name="about_us_contact">Contact</string>
    <string name="about_us_contact_text">+91 9725868313</string>
    <string name="about_us_developer">Developer</string>
    <string name="about_us_developer_name">AndroMOB</string>
    <string name="description">Description</string>
    <string name="description_texts">AM Radio is an Multi Radio Station Application For Android Platform, Android Mobile Application That Runs Online Streaming Radio, Supports Almost All Formats m3u8,rtmp type link which is play live radio, and many other audio formats, This Application Is Specially Optimized To Be Extremely Easy to Configure And Detailed Documentation is Provided, You Can Easily Create Your Own Multi Station Live Radio App With This Template And Save Your Money And Time.</string>

    <string name="exit_dialog_text">What you want to do ?</string>
    <string name="minimize">Minimize</string>
    <string name="quit">Quit</string>

    <string name="image">image</string>
    <string name="navigation_drawer_open" />
    <string name="navigation_drawer_close" />

    <string name="msg_whoops">Whoops!</string>
    <string name="msg_failed">Failed to load stream, probably the stream server currently down!</string>

    <string name="retry">Retry</string>
    <string name="connection_msg">Something went wrong!!!</string>
    <string name="check_internet">Please check your internet connection</string>
    <string name="try_again">Please try again</string>

    <string name="whoops">WHOOPS</string>
    <string name="no_data_msg">No Data Found!</string>

    <string name="app_share_msg">Hi, I would like to share Application which is used to play live tv free you can download it from below link\n\n</string>

    <string name="home">Home</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="latest_channels">Latest Channels</string>
    <string name="categories">Categories</string>
    <string name="favorites">Favorites</string>

    <string name="title_group1">Follow Us</string>
    <string name="nav_item_facebook">Facebook</string>
    <string name="nav_item_instagram">Instagram</string>
    <string name="nav_item_telegram">Telegram</string>
    <string name="nav_item_twitter">Twitter</string>

    <string name="title_group2">Communicate</string>
    <string name="feedback">Feedback</string>
    <string name="about_us">About Us</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit</string>


    <string name="action_search">Search</string>
    <string name="live">Live</string>
    <string name="now_playing">Now Playing</string>
    <string name="play">Play</string>
    <string name="audio_notification">Background media playback</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_song">Unknown Song</string>
    <string name="select_radio_msg">Please select any radio to play</string>
    <string name="view_all">View All</string>
    <string name="added_to_fav">Added To Favorite</string>
    <string name="removed_from_fav">Removed From Favorite</string>
    <string name="report_hint">Write your report here..</string>
    <string name="report">Report</string>
    <string name="send">Send</string>
    <string name="report_sent_msg">Report sent successfully</string>
    <string name="report_failed_msg">Report sent failed</string>
    <string name="loading">Please Wait…</string>

</resources>
