<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/no_internet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/colorPrimaryLight"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:contentDescription="@string/image"
            android:src="@drawable/no_internet" />

        <TextView
            android:id="@+id/txtNoConnection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/connection_msg"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/txtErorMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/check_internet"
            android:textAlignment="center"
            android:textColor="@color/colorTextPrimary"
            android:textSize="16sp" />

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btn_retry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/retry"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            android:textSize="18.5sp"
            android:textStyle="bold"
            android:theme="@style/Theme.MaterialComponents"
            app:backgroundTint="@color/colorPrimaryDark"
            app:borderWidth="0dp"
            app:useCompatPadding="true" />

    </LinearLayout>

</RelativeLayout>