<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        app:cardBackgroundColor="@color/colorPrimary"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="20dp"
                    android:text="@string/app_name"
                    android:textColor="@color/colorAccent"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="end">

                    <ImageView
                        android:id="@+id/close_btn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:contentDescription="@string/image"
                        android:elevation="5dp"
                        android:src="@drawable/ic_close"
                        app:tint="@color/colorAccent" />
                </LinearLayout>
            </LinearLayout>

            <FrameLayout
                android:layout_marginTop="10dp"
                android:id="@+id/adContainerView"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/eror_messege"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:gravity="center"
                android:text="@string/exit_dialog_text"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="20dp"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/minimize_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_round_bg_yes"
                    android:text="@string/minimize"
                    android:textSize="15sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/quit_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/button_round_bg_no"
                    android:text="@string/quit"
                    android:textSize="15sp"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    app:backgroundTint="@null" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>