<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:background="@drawable/button_bg_top_round"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/radio_icon_mini"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image"
            android:layout_marginStart="10dp"
            android:elevation="6dp"
            android:src="@drawable/app_icon" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/radio_name_mini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/colorTextPrimary"
                android:textSize="17.5sp" />

            <TextView
                android:id="@+id/now_playing_tv_mini"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="marquee"
                android:marqueeRepeatLimit="marquee_forever"
                android:scrollHorizontally="true"
                android:singleLine="true"
                android:text="@string/now_playing"
                android:textColor="@color/white"
                android:textSize="13.5sp" />

        </LinearLayout>

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/radioProgressMini"
            android:layout_width="55dp"
            android:layout_height="55dp"
            android:layout_marginEnd="10dp"
            android:scaleType="centerCrop"
            android:visibility="gone"
            app:lottie_autoPlay="true"
            app:lottie_colorFilter="@color/white"
            app:lottie_fileName="circle_loading_white.json"
            app:lottie_loop="true" />

        <ImageView
            android:id="@+id/btnPLayMini"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/image"
            android:padding="5dp"
            android:src="@drawable/ic_play"
            app:tint="@color/colorPrimarySecond" />

    </LinearLayout>

</LinearLayout>