<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="10dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:cardBackgroundColor="@color/colorPrimaryDark"
                        app:cardCornerRadius="5dp"
                        app:cardElevation="3dp"
                        app:cardUseCompatPadding="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="vertical"
                            android:padding="10dp"
                            tools:ignore="UseCompoundDrawables">

                            <ImageView
                                android:layout_width="90dp"
                                android:layout_height="90dp"
                                android:layout_gravity="center"
                                android:src="@drawable/app_icon" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:gravity="center"
                                android:orientation="vertical">

                                <TextView
                                    android:visibility="gone"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center"
                                    android:gravity="center"
                                    android:text="@string/app_name"
                                    android:textColor="@color/colorPrimarySecond"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_marginTop="5dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/about_heading_text"
                                    android:textColor="@color/colorTextPrimary"
                                    android:textSize="12sp" />
                            </LinearLayout>

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_info"
                            android:backgroundTint="@color/colorPrimarySecond"
                            android:contentDescription="@string/image"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/line_horizontal_grey" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_version"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/textView_about_version"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/email_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_email"
                            android:backgroundTint="@color/colorPrimarySecond"
                            android:contentDescription="@string/image" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/line_horizontal_grey" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_email"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_email_text"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/dev_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center"
                            android:background="@drawable/ic_about"
                            android:backgroundTint="@color/colorPrimarySecond"
                            android:contentDescription="@string/image"/>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="match_parent"
                            android:layout_marginStart="5dp"
                            android:background="@drawable/line_horizontal_grey" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="10dp"
                            android:gravity="start"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_developer"
                                android:textColor="@color/colorTextPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/about_us_developer_name"
                                android:textColor="@color/white"
                                android:textSize="14sp" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/colorPrimaryDark"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="3dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/description"
                            android:textColor="@color/colorTextPrimary"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textView_about_about"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description_texts"
                            android:textColor="@color/white"
                            android:textSize="14sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <FrameLayout
                    android:id="@+id/adContainerBigBanner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="vertical" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>

